now return focus result if it is a focusList

--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "focus-poc",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
