handling some scroll behavior

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "focus-poc",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "vanillajs-browser-helpers": "^1.1.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -25,10 +27,10 @@
     ]
   },
   "devDependencies": {
-    "flow-bin": "^0.120.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "flow-bin": "^0.120.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
